output/SMT/o3-mini-2025-01-31/trip/output/trip_planning_example_824.out
  File "/home/hz466/calendar-planning/source/../output/SMT/o3-mini-2025-01-31/trip/code/trip_planning_example_824.py", line 116
    /* pos[0] == 6 */ durations[6]))))))
    ^
SyntaxError: invalid syntax
